[package]
name = "simple-async-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["net", "os-poll"] }
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3.31" }

[profile.profiling]
inherits = "release"
debug = true
