[package]
name = "simple-async-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async Support
smol =         { version = "2.0.2" }
async-io =     { version = "2.4.0" }
futures-lite = { version = "2.5.0" }
futures =      { version = "0.3.31" }

# Environment, Setup, and Initialization
clap =   {version = "4.4.6" }
dotenv = { version = "0.15" }

# Observability
tracing =            { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[profile.profiling]
inherits = "release"
debug = true
